parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    OPENBRACE
    CLOSEBRACE

Grammar

Rule 0     S' -> func
Rule 1     func -> <empty>
Rule 2     func -> FUNC ID OPENBR argumentList CLOSEBR OPENBR statementGroup CLOSEBR func
Rule 3     argumentList -> <empty>
Rule 4     argumentList -> notEmptyArgumentList
Rule 5     notEmptyArgumentList -> declaration
Rule 6     notEmptyArgumentList -> matrix
Rule 7     notEmptyArgumentList -> declaration COMMA notEmptyArgumentList
Rule 8     notEmptyArgumentList -> matrix COMMA notEmptyArgumentList
Rule 9     declaration -> typeList ID
Rule 10    declaration -> constTypeList ID
Rule 11    typeList -> SIGNED
Rule 12    typeList -> UNSIGNED
Rule 13    typeList -> CELL
Rule 14    constTypeList -> CONST SIGNED
Rule 15    constTypeList -> CONST UNSIGNED
Rule 16    constTypeList -> CONST CELL
Rule 17    statementGroup -> <empty>
Rule 18    statementGroup -> statement statementGroup
Rule 19    statement -> TOP
Rule 20    statement -> RIGHT
Rule 21    statement -> LEFT
Rule 22    statement -> DOWN
Rule 23    statement -> sentence
Rule 24    statement -> testOnce
Rule 25    statement -> testRep
Rule 26    testOnce -> TESTONCE OPENBR binaryExpression CLOSEBR OPENBR statementGroup CLOSEBR
Rule 27    testRep -> TESTREP OPENBR binaryExpression CLOSEBR OPENBR statementGroup CLOSEBR
Rule 28    sentence -> expression SEMICOLON
Rule 29    sentence -> declaration SEMICOLON
Rule 30    sentence -> matrix SEMICOLON
Rule 31    expression -> ID
Rule 32    expression -> INT
Rule 33    expression -> negative
Rule 34    negative -> MINUS expression
Rule 35    expression -> cell
Rule 36    cell -> OPENBR robotexpression COMMA robotexpression COMMA robotexpression COMMA robotexpression CLOSEBR
Rule 37    expression -> matrixOneMore
Rule 38    matrixOneMore -> OPENSBR array CLOSESBR
Rule 39    expression -> binaryExpression
Rule 40    expression -> call
Rule 41    expression -> assignment
Rule 42    expression -> access
Rule 43    expression -> unop
Rule 44    expression -> xray
Rule 45    matrix -> MATRIX declaration OPENSBR expression COMMA expression CLOSESBR
Rule 46    matrix -> MATRIX declaration
Rule 47    xray -> XRAY
Rule 48    call -> CALL ID OPENBR namelist CLOSEBR
Rule 49    namelist -> <empty>
Rule 50    namelist -> notEmptyNamelist
Rule 51    notEmptyNamelist -> expression
Rule 52    notEmptyNamelist -> expression COMMA notEmptyNamelist
Rule 53    assignment -> expression ASSIGN expression
Rule 54    assignment -> declaration ASSIGN expression
Rule 55    assignment -> matrix ASSIGN expression
Rule 56    unop -> UNOP ID
Rule 57    access -> expression OPENBR expression COMMA expression CLOSEBR
Rule 58    access -> expression OPENBR expression COMMA expression COMMA expression CLOSEBR
Rule 59    binaryExpression -> <empty>
Rule 60    binaryExpression -> expression PLUS expression
Rule 61    binaryExpression -> expression MINUS expression
Rule 62    binaryExpression -> expression MUL expression
Rule 63    binaryExpression -> expression DIV expression
Rule 64    binaryExpression -> expression REM expression
Rule 65    binaryExpression -> expression EQUAL expression
Rule 66    binaryExpression -> expression GREAT expression
Rule 67    binaryExpression -> expression LESS expression
Rule 68    binaryExpression -> expression EQUAL forRobotExpression
Rule 69    forRobotExpression -> COV robotexpression COV
Rule 70    robotexpression -> TOP
Rule 71    robotexpression -> NTOP
Rule 72    robotexpression -> RIGHT
Rule 73    robotexpression -> NRIGHT
Rule 74    robotexpression -> LEFT
Rule 75    robotexpression -> NLEFT
Rule 76    robotexpression -> DOWN
Rule 77    robotexpression -> NDOWN
Rule 78    array -> OPENSBR namelist CLOSESBR
Rule 79    array -> OPENSBR namelist CLOSESBR COMMA array
Rule 80    sentence -> expression
Rule 81    sentence -> declaration
Rule 82    sentence -> matrix
Rule 83    func -> FUNC OPENBR argumentList CLOSEBR OPENBR statementGroup CLOSEBR func
Rule 84    call -> CALL ID namelist
Rule 85    cell -> OPENBR robotexpression COMMA robotexpression COMMA robotexpression CLOSEBR

Terminals, with rules where they appear

ASSIGN               : 53 54 55
CALL                 : 48 84
CELL                 : 13 16
CLOSEBR              : 2 2 26 26 27 27 36 48 57 58 83 83 85
CLOSEBRACE           : 
CLOSESBR             : 38 45 78 79
COMMA                : 7 8 36 36 36 45 52 57 58 58 79 85 85
CONST                : 14 15 16
COV                  : 69 69
DIV                  : 63
DOWN                 : 22 76
EQUAL                : 65 68
FUNC                 : 2 83
GREAT                : 66
ID                   : 2 9 10 31 48 56 84
INT                  : 32
LEFT                 : 21 74
LESS                 : 67
MATRIX               : 45 46
MINUS                : 34 61
MUL                  : 62
NDOWN                : 77
NLEFT                : 75
NRIGHT               : 73
NTOP                 : 71
OPENBR               : 2 2 26 26 27 27 36 48 57 58 83 83 85
OPENBRACE            : 
OPENSBR              : 38 45 78 79
PLUS                 : 60
REM                  : 64
RIGHT                : 20 72
SEMICOLON            : 28 29 30
SIGNED               : 11 14
TESTONCE             : 26
TESTREP              : 27
TOP                  : 19 70
UNOP                 : 56
UNSIGNED             : 12 15
XRAY                 : 47
error                : 

Nonterminals, with rules where they appear

access               : 42
argumentList         : 2 83
array                : 38 79
assignment           : 41
binaryExpression     : 26 27 39
call                 : 40
cell                 : 35
constTypeList        : 10
declaration          : 5 7 29 45 46 54 81
expression           : 28 34 45 45 51 52 53 53 54 55 57 57 57 58 58 58 58 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 80
forRobotExpression   : 68
func                 : 2 83 0
matrix               : 6 8 30 55 82
matrixOneMore        : 37
namelist             : 48 78 79 84
negative             : 33
notEmptyArgumentList : 4 7 8
notEmptyNamelist     : 50 52
robotexpression      : 36 36 36 36 69 85 85 85
sentence             : 23
statement            : 18
statementGroup       : 2 18 26 27 83
testOnce             : 24
testRep              : 25
typeList             : 9
unop                 : 43
xray                 : 44

Parsing method: LALR

state 0

    (0) S' -> . func
    (1) func -> .
    (2) func -> . FUNC ID OPENBR argumentList CLOSEBR OPENBR statementGroup CLOSEBR func
    (83) func -> . FUNC OPENBR argumentList CLOSEBR OPENBR statementGroup CLOSEBR func

    $end            reduce using rule 1 (func -> .)
    FUNC            shift and go to state 2

    func                           shift and go to state 1

state 1

    (0) S' -> func .



state 2

    (2) func -> FUNC . ID OPENBR argumentList CLOSEBR OPENBR statementGroup CLOSEBR func
    (83) func -> FUNC . OPENBR argumentList CLOSEBR OPENBR statementGroup CLOSEBR func

    ID              shift and go to state 4
    OPENBR          shift and go to state 3


state 3

    (83) func -> FUNC OPENBR . argumentList CLOSEBR OPENBR statementGroup CLOSEBR func
    (3) argumentList -> .
    (4) argumentList -> . notEmptyArgumentList
    (5) notEmptyArgumentList -> . declaration
    (6) notEmptyArgumentList -> . matrix
    (7) notEmptyArgumentList -> . declaration COMMA notEmptyArgumentList
    (8) notEmptyArgumentList -> . matrix COMMA notEmptyArgumentList
    (9) declaration -> . typeList ID
    (10) declaration -> . constTypeList ID
    (45) matrix -> . MATRIX declaration OPENSBR expression COMMA expression CLOSESBR
    (46) matrix -> . MATRIX declaration
    (11) typeList -> . SIGNED
    (12) typeList -> . UNSIGNED
    (13) typeList -> . CELL
    (14) constTypeList -> . CONST SIGNED
    (15) constTypeList -> . CONST UNSIGNED
    (16) constTypeList -> . CONST CELL

    CLOSEBR         reduce using rule 3 (argumentList -> .)
    MATRIX          shift and go to state 13
    SIGNED          shift and go to state 10
    UNSIGNED        shift and go to state 9
    CELL            shift and go to state 12
    CONST           shift and go to state 6

    argumentList                   shift and go to state 5
    matrix                         shift and go to state 15
    typeList                       shift and go to state 7
    notEmptyArgumentList           shift and go to state 11
    declaration                    shift and go to state 8
    constTypeList                  shift and go to state 14

state 4

    (2) func -> FUNC ID . OPENBR argumentList CLOSEBR OPENBR statementGroup CLOSEBR func

    OPENBR          shift and go to state 16


state 5

    (83) func -> FUNC OPENBR argumentList . CLOSEBR OPENBR statementGroup CLOSEBR func

    CLOSEBR         shift and go to state 17


state 6

    (14) constTypeList -> CONST . SIGNED
    (15) constTypeList -> CONST . UNSIGNED
    (16) constTypeList -> CONST . CELL

    SIGNED          shift and go to state 20
    UNSIGNED        shift and go to state 19
    CELL            shift and go to state 18


state 7

    (9) declaration -> typeList . ID

    ID              shift and go to state 21


state 8

    (5) notEmptyArgumentList -> declaration .
    (7) notEmptyArgumentList -> declaration . COMMA notEmptyArgumentList

    CLOSEBR         reduce using rule 5 (notEmptyArgumentList -> declaration .)
    COMMA           shift and go to state 22


state 9

    (12) typeList -> UNSIGNED .

    ID              reduce using rule 12 (typeList -> UNSIGNED .)


state 10

    (11) typeList -> SIGNED .

    ID              reduce using rule 11 (typeList -> SIGNED .)


state 11

    (4) argumentList -> notEmptyArgumentList .

    CLOSEBR         reduce using rule 4 (argumentList -> notEmptyArgumentList .)


state 12

    (13) typeList -> CELL .

    ID              reduce using rule 13 (typeList -> CELL .)


state 13

    (45) matrix -> MATRIX . declaration OPENSBR expression COMMA expression CLOSESBR
    (46) matrix -> MATRIX . declaration
    (9) declaration -> . typeList ID
    (10) declaration -> . constTypeList ID
    (11) typeList -> . SIGNED
    (12) typeList -> . UNSIGNED
    (13) typeList -> . CELL
    (14) constTypeList -> . CONST SIGNED
    (15) constTypeList -> . CONST UNSIGNED
    (16) constTypeList -> . CONST CELL

    SIGNED          shift and go to state 10
    UNSIGNED        shift and go to state 9
    CELL            shift and go to state 12
    CONST           shift and go to state 6

    typeList                       shift and go to state 7
    constTypeList                  shift and go to state 14
    declaration                    shift and go to state 23

state 14

    (10) declaration -> constTypeList . ID

    ID              shift and go to state 24


state 15

    (6) notEmptyArgumentList -> matrix .
    (8) notEmptyArgumentList -> matrix . COMMA notEmptyArgumentList

    CLOSEBR         reduce using rule 6 (notEmptyArgumentList -> matrix .)
    COMMA           shift and go to state 25


state 16

    (2) func -> FUNC ID OPENBR . argumentList CLOSEBR OPENBR statementGroup CLOSEBR func
    (3) argumentList -> .
    (4) argumentList -> . notEmptyArgumentList
    (5) notEmptyArgumentList -> . declaration
    (6) notEmptyArgumentList -> . matrix
    (7) notEmptyArgumentList -> . declaration COMMA notEmptyArgumentList
    (8) notEmptyArgumentList -> . matrix COMMA notEmptyArgumentList
    (9) declaration -> . typeList ID
    (10) declaration -> . constTypeList ID
    (45) matrix -> . MATRIX declaration OPENSBR expression COMMA expression CLOSESBR
    (46) matrix -> . MATRIX declaration
    (11) typeList -> . SIGNED
    (12) typeList -> . UNSIGNED
    (13) typeList -> . CELL
    (14) constTypeList -> . CONST SIGNED
    (15) constTypeList -> . CONST UNSIGNED
    (16) constTypeList -> . CONST CELL

    CLOSEBR         reduce using rule 3 (argumentList -> .)
    MATRIX          shift and go to state 13
    SIGNED          shift and go to state 10
    UNSIGNED        shift and go to state 9
    CELL            shift and go to state 12
    CONST           shift and go to state 6

    argumentList                   shift and go to state 26
    matrix                         shift and go to state 15
    typeList                       shift and go to state 7
    notEmptyArgumentList           shift and go to state 11
    declaration                    shift and go to state 8
    constTypeList                  shift and go to state 14

state 17

    (83) func -> FUNC OPENBR argumentList CLOSEBR . OPENBR statementGroup CLOSEBR func

    OPENBR          shift and go to state 27


state 18

    (16) constTypeList -> CONST CELL .

    ID              reduce using rule 16 (constTypeList -> CONST CELL .)


state 19

    (15) constTypeList -> CONST UNSIGNED .

    ID              reduce using rule 15 (constTypeList -> CONST UNSIGNED .)


state 20

    (14) constTypeList -> CONST SIGNED .

    ID              reduce using rule 14 (constTypeList -> CONST SIGNED .)


state 21

    (9) declaration -> typeList ID .

    ASSIGN          reduce using rule 9 (declaration -> typeList ID .)
    COMMA           reduce using rule 9 (declaration -> typeList ID .)
    CLOSEBR         reduce using rule 9 (declaration -> typeList ID .)
    SEMICOLON       reduce using rule 9 (declaration -> typeList ID .)
    TOP             reduce using rule 9 (declaration -> typeList ID .)
    RIGHT           reduce using rule 9 (declaration -> typeList ID .)
    LEFT            reduce using rule 9 (declaration -> typeList ID .)
    DOWN            reduce using rule 9 (declaration -> typeList ID .)
    TESTONCE        reduce using rule 9 (declaration -> typeList ID .)
    TESTREP         reduce using rule 9 (declaration -> typeList ID .)
    ID              reduce using rule 9 (declaration -> typeList ID .)
    INT             reduce using rule 9 (declaration -> typeList ID .)
    MATRIX          reduce using rule 9 (declaration -> typeList ID .)
    MINUS           reduce using rule 9 (declaration -> typeList ID .)
    OPENBR          reduce using rule 9 (declaration -> typeList ID .)
    OPENSBR         reduce using rule 9 (declaration -> typeList ID .)
    CALL            reduce using rule 9 (declaration -> typeList ID .)
    UNOP            reduce using rule 9 (declaration -> typeList ID .)
    XRAY            reduce using rule 9 (declaration -> typeList ID .)
    SIGNED          reduce using rule 9 (declaration -> typeList ID .)
    UNSIGNED        reduce using rule 9 (declaration -> typeList ID .)
    CELL            reduce using rule 9 (declaration -> typeList ID .)
    CONST           reduce using rule 9 (declaration -> typeList ID .)
    PLUS            reduce using rule 9 (declaration -> typeList ID .)
    MUL             reduce using rule 9 (declaration -> typeList ID .)
    DIV             reduce using rule 9 (declaration -> typeList ID .)
    REM             reduce using rule 9 (declaration -> typeList ID .)
    EQUAL           reduce using rule 9 (declaration -> typeList ID .)
    GREAT           reduce using rule 9 (declaration -> typeList ID .)
    LESS            reduce using rule 9 (declaration -> typeList ID .)


state 22

    (7) notEmptyArgumentList -> declaration COMMA . notEmptyArgumentList
    (5) notEmptyArgumentList -> . declaration
    (6) notEmptyArgumentList -> . matrix
    (7) notEmptyArgumentList -> . declaration COMMA notEmptyArgumentList
    (8) notEmptyArgumentList -> . matrix COMMA notEmptyArgumentList
    (9) declaration -> . typeList ID
    (10) declaration -> . constTypeList ID
    (45) matrix -> . MATRIX declaration OPENSBR expression COMMA expression CLOSESBR
    (46) matrix -> . MATRIX declaration
    (11) typeList -> . SIGNED
    (12) typeList -> . UNSIGNED
    (13) typeList -> . CELL
    (14) constTypeList -> . CONST SIGNED
    (15) constTypeList -> . CONST UNSIGNED
    (16) constTypeList -> . CONST CELL

    MATRIX          shift and go to state 13
    SIGNED          shift and go to state 10
    UNSIGNED        shift and go to state 9
    CELL            shift and go to state 12
    CONST           shift and go to state 6

    matrix                         shift and go to state 15
    typeList                       shift and go to state 7
    constTypeList                  shift and go to state 14
    notEmptyArgumentList           shift and go to state 28
    declaration                    shift and go to state 8

state 23

    (45) matrix -> MATRIX declaration . OPENSBR expression COMMA expression CLOSESBR
    (46) matrix -> MATRIX declaration .

  ! shift/reduce conflict for OPENSBR resolved as shift
    OPENSBR         shift and go to state 29
    ASSIGN          reduce using rule 46 (matrix -> MATRIX declaration .)
    SEMICOLON       reduce using rule 46 (matrix -> MATRIX declaration .)
    TOP             reduce using rule 46 (matrix -> MATRIX declaration .)
    RIGHT           reduce using rule 46 (matrix -> MATRIX declaration .)
    LEFT            reduce using rule 46 (matrix -> MATRIX declaration .)
    DOWN            reduce using rule 46 (matrix -> MATRIX declaration .)
    TESTONCE        reduce using rule 46 (matrix -> MATRIX declaration .)
    TESTREP         reduce using rule 46 (matrix -> MATRIX declaration .)
    ID              reduce using rule 46 (matrix -> MATRIX declaration .)
    INT             reduce using rule 46 (matrix -> MATRIX declaration .)
    MATRIX          reduce using rule 46 (matrix -> MATRIX declaration .)
    MINUS           reduce using rule 46 (matrix -> MATRIX declaration .)
    OPENBR          reduce using rule 46 (matrix -> MATRIX declaration .)
    CALL            reduce using rule 46 (matrix -> MATRIX declaration .)
    UNOP            reduce using rule 46 (matrix -> MATRIX declaration .)
    XRAY            reduce using rule 46 (matrix -> MATRIX declaration .)
    SIGNED          reduce using rule 46 (matrix -> MATRIX declaration .)
    UNSIGNED        reduce using rule 46 (matrix -> MATRIX declaration .)
    CELL            reduce using rule 46 (matrix -> MATRIX declaration .)
    CONST           reduce using rule 46 (matrix -> MATRIX declaration .)
    PLUS            reduce using rule 46 (matrix -> MATRIX declaration .)
    MUL             reduce using rule 46 (matrix -> MATRIX declaration .)
    DIV             reduce using rule 46 (matrix -> MATRIX declaration .)
    REM             reduce using rule 46 (matrix -> MATRIX declaration .)
    EQUAL           reduce using rule 46 (matrix -> MATRIX declaration .)
    GREAT           reduce using rule 46 (matrix -> MATRIX declaration .)
    LESS            reduce using rule 46 (matrix -> MATRIX declaration .)
    CLOSEBR         reduce using rule 46 (matrix -> MATRIX declaration .)
    COMMA           reduce using rule 46 (matrix -> MATRIX declaration .)

  ! OPENSBR         [ reduce using rule 46 (matrix -> MATRIX declaration .) ]


state 24

    (10) declaration -> constTypeList ID .

    ASSIGN          reduce using rule 10 (declaration -> constTypeList ID .)
    COMMA           reduce using rule 10 (declaration -> constTypeList ID .)
    CLOSEBR         reduce using rule 10 (declaration -> constTypeList ID .)
    SEMICOLON       reduce using rule 10 (declaration -> constTypeList ID .)
    TOP             reduce using rule 10 (declaration -> constTypeList ID .)
    RIGHT           reduce using rule 10 (declaration -> constTypeList ID .)
    LEFT            reduce using rule 10 (declaration -> constTypeList ID .)
    DOWN            reduce using rule 10 (declaration -> constTypeList ID .)
    TESTONCE        reduce using rule 10 (declaration -> constTypeList ID .)
    TESTREP         reduce using rule 10 (declaration -> constTypeList ID .)
    ID              reduce using rule 10 (declaration -> constTypeList ID .)
    INT             reduce using rule 10 (declaration -> constTypeList ID .)
    MATRIX          reduce using rule 10 (declaration -> constTypeList ID .)
    MINUS           reduce using rule 10 (declaration -> constTypeList ID .)
    OPENBR          reduce using rule 10 (declaration -> constTypeList ID .)
    OPENSBR         reduce using rule 10 (declaration -> constTypeList ID .)
    CALL            reduce using rule 10 (declaration -> constTypeList ID .)
    UNOP            reduce using rule 10 (declaration -> constTypeList ID .)
    XRAY            reduce using rule 10 (declaration -> constTypeList ID .)
    SIGNED          reduce using rule 10 (declaration -> constTypeList ID .)
    UNSIGNED        reduce using rule 10 (declaration -> constTypeList ID .)
    CELL            reduce using rule 10 (declaration -> constTypeList ID .)
    CONST           reduce using rule 10 (declaration -> constTypeList ID .)
    PLUS            reduce using rule 10 (declaration -> constTypeList ID .)
    MUL             reduce using rule 10 (declaration -> constTypeList ID .)
    DIV             reduce using rule 10 (declaration -> constTypeList ID .)
    REM             reduce using rule 10 (declaration -> constTypeList ID .)
    EQUAL           reduce using rule 10 (declaration -> constTypeList ID .)
    GREAT           reduce using rule 10 (declaration -> constTypeList ID .)
    LESS            reduce using rule 10 (declaration -> constTypeList ID .)


state 25

    (8) notEmptyArgumentList -> matrix COMMA . notEmptyArgumentList
    (5) notEmptyArgumentList -> . declaration
    (6) notEmptyArgumentList -> . matrix
    (7) notEmptyArgumentList -> . declaration COMMA notEmptyArgumentList
    (8) notEmptyArgumentList -> . matrix COMMA notEmptyArgumentList
    (9) declaration -> . typeList ID
    (10) declaration -> . constTypeList ID
    (45) matrix -> . MATRIX declaration OPENSBR expression COMMA expression CLOSESBR
    (46) matrix -> . MATRIX declaration
    (11) typeList -> . SIGNED
    (12) typeList -> . UNSIGNED
    (13) typeList -> . CELL
    (14) constTypeList -> . CONST SIGNED
    (15) constTypeList -> . CONST UNSIGNED
    (16) constTypeList -> . CONST CELL

    MATRIX          shift and go to state 13
    SIGNED          shift and go to state 10
    UNSIGNED        shift and go to state 9
    CELL            shift and go to state 12
    CONST           shift and go to state 6

    matrix                         shift and go to state 15
    typeList                       shift and go to state 7
    constTypeList                  shift and go to state 14
    notEmptyArgumentList           shift and go to state 30
    declaration                    shift and go to state 8

state 26

    (2) func -> FUNC ID OPENBR argumentList . CLOSEBR OPENBR statementGroup CLOSEBR func

    CLOSEBR         shift and go to state 31


state 27

    (83) func -> FUNC OPENBR argumentList CLOSEBR OPENBR . statementGroup CLOSEBR func
    (17) statementGroup -> .
    (18) statementGroup -> . statement statementGroup
    (19) statement -> . TOP
    (20) statement -> . RIGHT
    (21) statement -> . LEFT
    (22) statement -> . DOWN
    (23) statement -> . sentence
    (24) statement -> . testOnce
    (25) statement -> . testRep
    (28) sentence -> . expression SEMICOLON
    (29) sentence -> . declaration SEMICOLON
    (30) sentence -> . matrix SEMICOLON
    (80) sentence -> . expression
    (81) sentence -> . declaration
    (82) sentence -> . matrix
    (26) testOnce -> . TESTONCE OPENBR binaryExpression CLOSEBR OPENBR statementGroup CLOSEBR
    (27) testRep -> . TESTREP OPENBR binaryExpression CLOSEBR OPENBR statementGroup CLOSEBR
    (31) expression -> . ID
    (32) expression -> . INT
    (33) expression -> . negative
    (35) expression -> . cell
    (37) expression -> . matrixOneMore
    (39) expression -> . binaryExpression
    (40) expression -> . call
    (41) expression -> . assignment
    (42) expression -> . access
    (43) expression -> . unop
    (44) expression -> . xray
    (9) declaration -> . typeList ID
    (10) declaration -> . constTypeList ID
    (45) matrix -> . MATRIX declaration OPENSBR expression COMMA expression CLOSESBR
    (46) matrix -> . MATRIX declaration
    (34) negative -> . MINUS expression
    (36) cell -> . OPENBR robotexpression COMMA robotexpression COMMA robotexpression COMMA robotexpression CLOSEBR
    (85) cell -> . OPENBR robotexpression COMMA robotexpression COMMA robotexpression CLOSEBR
    (38) matrixOneMore -> . OPENSBR array CLOSESBR
    (59) binaryExpression -> .
    (60) binaryExpression -> . expression PLUS expression
    (61) binaryExpression -> . expression MINUS expression
    (62) binaryExpression -> . expression MUL expression
    (63) binaryExpression -> . expression DIV expression
    (64) binaryExpression -> . expression REM expression
    (65) binaryExpression -> . expression EQUAL expression
    (66) binaryExpression -> . expression GREAT expression
    (67) binaryExpression -> . expression LESS expression
    (68) binaryExpression -> . expression EQUAL forRobotExpression
    (48) call -> . CALL ID OPENBR namelist CLOSEBR
    (84) call -> . CALL ID namelist
    (53) assignment -> . expression ASSIGN expression
    (54) assignment -> . declaration ASSIGN expression
    (55) assignment -> . matrix ASSIGN expression
    (57) access -> . expression OPENBR expression COMMA expression CLOSEBR
    (58) access -> . expression OPENBR expression COMMA expression COMMA expression CLOSEBR
    (56) unop -> . UNOP ID
    (47) xray -> . XRAY
    (11) typeList -> . SIGNED
    (12) typeList -> . UNSIGNED
    (13) typeList -> . CELL
    (14) constTypeList -> . CONST SIGNED
    (15) constTypeList -> . CONST UNSIGNED
    (16) constTypeList -> . CONST CELL

  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for OPENBR resolved as shift
  ! shift/reduce conflict for TOP resolved as shift
  ! shift/reduce conflict for RIGHT resolved as shift
  ! shift/reduce conflict for LEFT resolved as shift
  ! shift/reduce conflict for DOWN resolved as shift
  ! shift/reduce conflict for TESTONCE resolved as shift
  ! shift/reduce conflict for TESTREP resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for MATRIX resolved as shift
  ! shift/reduce conflict for OPENSBR resolved as shift
  ! reduce/reduce conflict for CLOSEBR resolved using rule 17 (statementGroup -> .)
  ! shift/reduce conflict for CALL resolved as shift
  ! shift/reduce conflict for UNOP resolved as shift
  ! shift/reduce conflict for XRAY resolved as shift
  ! shift/reduce conflict for SIGNED resolved as shift
  ! shift/reduce conflict for UNSIGNED resolved as shift
  ! shift/reduce conflict for CELL resolved as shift
  ! shift/reduce conflict for CONST resolved as shift
    CLOSEBR         reduce using rule 17 (statementGroup -> .)
    TOP             shift and go to state 34
    RIGHT           shift and go to state 54
    LEFT            shift and go to state 47
    DOWN            shift and go to state 37
    TESTONCE        shift and go to state 60
    TESTREP         shift and go to state 61
    ID              shift and go to state 53
    INT             shift and go to state 55
    MATRIX          shift and go to state 13
    MINUS           shift and go to state 38
    OPENBR          shift and go to state 51
    OPENSBR         shift and go to state 56
    SEMICOLON       reduce using rule 59 (binaryExpression -> .)
    PLUS            reduce using rule 59 (binaryExpression -> .)
    MUL             reduce using rule 59 (binaryExpression -> .)
    DIV             reduce using rule 59 (binaryExpression -> .)
    REM             reduce using rule 59 (binaryExpression -> .)
    EQUAL           reduce using rule 59 (binaryExpression -> .)
    GREAT           reduce using rule 59 (binaryExpression -> .)
    LESS            reduce using rule 59 (binaryExpression -> .)
    ASSIGN          reduce using rule 59 (binaryExpression -> .)
    CALL            shift and go to state 59
    UNOP            shift and go to state 48
    XRAY            shift and go to state 58
    SIGNED          shift and go to state 10
    UNSIGNED        shift and go to state 9
    CELL            shift and go to state 12
    CONST           shift and go to state 6

  ! MINUS           [ reduce using rule 59 (binaryExpression -> .) ]
  ! OPENBR          [ reduce using rule 59 (binaryExpression -> .) ]
  ! TOP             [ reduce using rule 59 (binaryExpression -> .) ]
  ! RIGHT           [ reduce using rule 59 (binaryExpression -> .) ]
  ! LEFT            [ reduce using rule 59 (binaryExpression -> .) ]
  ! DOWN            [ reduce using rule 59 (binaryExpression -> .) ]
  ! TESTONCE        [ reduce using rule 59 (binaryExpression -> .) ]
  ! TESTREP         [ reduce using rule 59 (binaryExpression -> .) ]
  ! ID              [ reduce using rule 59 (binaryExpression -> .) ]
  ! INT             [ reduce using rule 59 (binaryExpression -> .) ]
  ! MATRIX          [ reduce using rule 59 (binaryExpression -> .) ]
  ! OPENSBR         [ reduce using rule 59 (binaryExpression -> .) ]
  ! CALL            [ reduce using rule 59 (binaryExpression -> .) ]
  ! UNOP            [ reduce using rule 59 (binaryExpression -> .) ]
  ! XRAY            [ reduce using rule 59 (binaryExpression -> .) ]
  ! SIGNED          [ reduce using rule 59 (binaryExpression -> .) ]
  ! UNSIGNED        [ reduce using rule 59 (binaryExpression -> .) ]
  ! CELL            [ reduce using rule 59 (binaryExpression -> .) ]
  ! CONST           [ reduce using rule 59 (binaryExpression -> .) ]
  ! CLOSEBR         [ reduce using rule 59 (binaryExpression -> .) ]

    unop                           shift and go to state 32
    sentence                       shift and go to state 33
    typeList                       shift and go to state 7
    testOnce                       shift and go to state 35
    access                         shift and go to state 39
    matrix                         shift and go to state 40
    negative                       shift and go to state 36
    xray                           shift and go to state 49
    testRep                        shift and go to state 43
    call                           shift and go to state 44
    statement                      shift and go to state 45
    binaryExpression               shift and go to state 46
    assignment                     shift and go to state 50
    declaration                    shift and go to state 52
    constTypeList                  shift and go to state 14
    cell                           shift and go to state 42
    matrixOneMore                  shift and go to state 57
    expression                     shift and go to state 62
    statementGroup                 shift and go to state 41

state 28

    (7) notEmptyArgumentList -> declaration COMMA notEmptyArgumentList .

    CLOSEBR         reduce using rule 7 (notEmptyArgumentList -> declaration COMMA notEmptyArgumentList .)


state 29

    (45) matrix -> MATRIX declaration OPENSBR . expression COMMA expression CLOSESBR
    (31) expression -> . ID
    (32) expression -> . INT
    (33) expression -> . negative
    (35) expression -> . cell
    (37) expression -> . matrixOneMore
    (39) expression -> . binaryExpression
    (40) expression -> . call
    (41) expression -> . assignment
    (42) expression -> . access
    (43) expression -> . unop
    (44) expression -> . xray
    (34) negative -> . MINUS expression
    (36) cell -> . OPENBR robotexpression COMMA robotexpression COMMA robotexpression COMMA robotexpression CLOSEBR
    (85) cell -> . OPENBR robotexpression COMMA robotexpression COMMA robotexpression CLOSEBR
    (38) matrixOneMore -> . OPENSBR array CLOSESBR
    (59) binaryExpression -> .
    (60) binaryExpression -> . expression PLUS expression
    (61) binaryExpression -> . expression MINUS expression
    (62) binaryExpression -> . expression MUL expression
    (63) binaryExpression -> . expression DIV expression
    (64) binaryExpression -> . expression REM expression
    (65) binaryExpression -> . expression EQUAL expression
    (66) binaryExpression -> . expression GREAT expression
    (67) binaryExpression -> . expression LESS expression
    (68) binaryExpression -> . expression EQUAL forRobotExpression
    (48) call -> . CALL ID OPENBR namelist CLOSEBR
    (84) call -> . CALL ID namelist
    (53) assignment -> . expression ASSIGN expression
    (54) assignment -> . declaration ASSIGN expression
    (55) assignment -> . matrix ASSIGN expression
    (57) access -> . expression OPENBR expression COMMA expression CLOSEBR
    (58) access -> . expression OPENBR expression COMMA expression COMMA expression CLOSEBR
    (56) unop -> . UNOP ID
    (47) xray -> . XRAY
    (9) declaration -> . typeList ID
    (10) declaration -> . constTypeList ID
    (45) matrix -> . MATRIX declaration OPENSBR expression COMMA expression CLOSESBR
    (46) matrix -> . MATRIX declaration
    (11) typeList -> . SIGNED
    (12) typeList -> . UNSIGNED
    (13) typeList -> . CELL
    (14) constTypeList -> . CONST SIGNED
    (15) constTypeList -> . CONST UNSIGNED
    (16) constTypeList -> . CONST CELL

  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for OPENBR resolved as shift
    ID              shift and go to state 53
    INT             shift and go to state 55
    MINUS           shift and go to state 38
    OPENBR          shift and go to state 51
    OPENSBR         shift and go to state 56
    COMMA           reduce using rule 59 (binaryExpression -> .)
    PLUS            reduce using rule 59 (binaryExpression -> .)
    MUL             reduce using rule 59 (binaryExpression -> .)
    DIV             reduce using rule 59 (binaryExpression -> .)
    REM             reduce using rule 59 (binaryExpression -> .)
    EQUAL           reduce using rule 59 (binaryExpression -> .)
    GREAT           reduce using rule 59 (binaryExpression -> .)
    LESS            reduce using rule 59 (binaryExpression -> .)
    ASSIGN          reduce using rule 59 (binaryExpression -> .)
    CALL            shift and go to state 59
    UNOP            shift and go to state 48
    XRAY            shift and go to state 58
    MATRIX          shift and go to state 13
    SIGNED          shift and go to state 10
    UNSIGNED        shift and go to state 9
    CELL            shift and go to state 12
    CONST           shift and go to state 6

  ! MINUS           [ reduce using rule 59 (binaryExpression -> .) ]
  ! OPENBR          [ reduce using rule 59 (binaryExpression -> .) ]
